--- a/package.json
+++ b/package.json
@@ -1,43 +1,32 @@
 {
-  "name": "glitch-hello-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on express, instantly up and running. Built to be remixed on Glitch.com.",
+  "name": "social-media-info-bot",
+  "version": "1.0.0",
+  "description": "Telegram bot for social media information extraction",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "glitch-hello-node",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/username/repository"
-  },
   "dependencies": {
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
-    "crypto": "^1.0.1",
-    "express": "^4.17.1",
-    "multer": "^1.4.2",
-    "node-telegram-bot-api": "^0.66.0",
-    "telegraf": "^4.7.0",
-    "node-persist": "^3.1.0",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "sqlite3": "^5.1.7", 
-    "vm2": "^3.9.17",
-    "cheerio": "1.0.0-rc.9",
-    "base64-js": "^1.5.1",
-    "telebot": "^1.2.0",
-    "node-fetch": "^2.6.1",
-    "luxon": "^3.3.0",
-    "sharp": "^0.32.0",
-    "cors": "^2.8.5",
+    "moment": "^2.30.1",
+    "country-code-lookup": "^0.0.20",
+    "node-telegram-bot-api": "^0.61.0", 
+    "fs": "0.0.1-security",
+     "axios": "^1.6.0",
+    "dotenv": "^16.0.0", 
+    "cheerio": "^1.0.0-rc.12",
+    "child_process": "^1.0.2", 
+    "express": "^4.19.2", 
     "form-data": "^4.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "fs": "^0.0.1-security",
-    "random": "^3.0.6",
-    "moment": "^2.29.4"
+    "sqlite3": "^5.1.6",
+    "path": "^0.12.7",
+     "mime-types": "^2.1.35",
+    "archiver": "^5.3.1",
+    "form-data": "^4.0.0",
+    "youtube-dl-exec": "^2.1.5", 
+    "fs-extra": "^11.1.1",
+    "uuid": "^9.0.1", 
+    "https": "^1.0.0",
+    "util": "^0.12.5"
   },
   "engines": {
     "node": ">=14.0.0"
