--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "form-data": "^4.0.0",
     "sqlite3": "^5.1.6",
     "path": "^0.12.7",
+    "html-entities": "^2.5.2", 
      "mime-types": "^2.1.35",
     "archiver": "^5.3.1",
     "form-data": "^4.0.0",
