--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "child_process": "^1.0.2", 
     "express": "^4.19.2", 
     "form-data": "^4.0.0",
+    "multer": "^1.4.5-lts.1", 
     "sqlite3": "^5.1.6",
     "path": "^0.12.7",
     "html-entities": "^2.5.2", 
