--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2", 
     "express": "^4.19.2", 
+    "fluent-ffmpeg": "^2.1.3", 
     "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1", 
     "sqlite3": "^5.1.6",
